--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy React + Vite to Github pages
 on:
   push:
     branches:
-      -main
+      - main
 
 jobs:
     build-deploy:
@@ -15,15 +15,15 @@ jobs:
               uses: actions/checkout@v3
 
             #Setup Nodejs
-            - name: Checkout code
+            - name: Setup Nodejs
               uses: actions/setup-node@v3
               with:
                   node-version: 18
 
             - name: Install Dependencies
-              run: npm Install
+              run: npm install
 
-            - name: Install Dependencies
+            - name: Build the project
               run: npm run build
 
             - name: Deploy to github pages
